# imGUI-Rendering-Test

./: CMakeLists.txt  imgui.ini
res/shaders/: BasicBatched.shader  BatchedTexture.shader  Texture.shader
src/: Application.cpp  IndexBuffer.cpp  README.txt  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBufferLayout.h  chernoLogoVersion.txt
src/tests/: Test.cpp  Test.h  TestBatcher.cpp  TestBatcher.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h  TestTextureBatch.cpp  TestTextureBatch.h
